fet(server) refactor tchalanet server