@@ -1,18 +1,16 @@
 package com.tchalanet.server.features.pagemodel.shared.dynamic;
 
 import com.tchalanet.server.common.bus.QueryBus;
-import com.tchalanet.server.core.draw.application.print.DrawChannelLabelResolver;
-import com.tchalanet.server.core.draw.application.query.model.GetLatestPublicDrawResultsQuery;
-import com.tchalanet.server.core.draw.infra.web.model.PublicDrawResultItemResponse;
-import com.tchalanet.server.core.draw.infra.web.model.PublicLatestDrawResultsResponse;
 import com.tchalanet.server.features.pagemodel.shared.block.ResultsByGameBlock;
-import java.time.LocalTime;
+import com.tchalanet.server.features.publicdraw.application.query.model.GetLatestPublicDrawResultsQuery;
+import com.tchalanet.server.features.publicdraw.infra.web.model.PublicLatestDrawResultsResponse;
+import java.time.Clock;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -20,100 +18,115 @@ import org.springframework.stereotype.Service;
 public class SharedResultsByGameAggregator {
 
   private final QueryBus queryBus;
-  private final DrawChannelLabelResolver channelLabelResolver;
-  private static final Logger log = LoggerFactory.getLogger(SharedResultsByGameAggregator.class);
+  private final Clock clock; // inject Clock for testability
 
   public ResultsByGameBlock buildResultsBlock(String currentLang) {
+    // locale kept for future i18n needs (we return keys)
     Locale locale =
-        currentLang == null || currentLang.isBlank()
+        (currentLang == null || currentLang.isBlank())
             ? Locale.getDefault()
             : Locale.forLanguageTag(currentLang);
 
-    // 1) Derniers résultats : utiliser le handler public pour obtenir les derniers résultats par
-    // canal
-    int limitPerChannel = 1; // on ne veut que le dernier résultat
-    List<PublicLatestDrawResultsResponse> latestResponses =
-        queryBus.send(new GetLatestPublicDrawResultsQuery(limitPerChannel));
-
-    if (latestResponses != null) {
-      latestResponses.forEach(
-          latest -> {
-            if (latest.nextScheduledAt() == null) {
-              log.warn(
-                  "No nextScheduledAt for channel {} (drawTime={})",
-                  latest.channelCode(),
-                  latest.drawTime());
-            } else {
-              log.debug(
-                  "NextScheduledAt for channel {} = {}",
-                  latest.channelCode(),
-                  latest.nextScheduledAt());
-            }
-          });
-    }
+    int limitPerSlot = 1;
+    List<PublicLatestDrawResultsResponse> latest =
+        queryBus.send(new GetLatestPublicDrawResultsQuery(limitPerSlot));
 
     List<ResultsByGameBlock.GameResults> games =
-        (latestResponses == null) ? List.of() : toGameResults(latestResponses, locale);
+        (latest == null) ? List.of() : toGames(latest, locale);
 
     return new ResultsByGameBlock(games);
   }
 
-  private List<ResultsByGameBlock.GameResults> toGameResults(
+  private List<ResultsByGameBlock.GameResults> toGames(
       List<PublicLatestDrawResultsResponse> latestResponses, Locale locale) {
+
     return latestResponses.stream()
-        .filter(latest -> latest != null && latest.results() != null && !latest.results().isEmpty())
-        .map(
-            latest ->
-                toGameResultsFromLatest(
-                    latest, latest.results().stream().findFirst().get(), locale))
+        .filter(r -> r != null && r.results() != null && !r.results().isEmpty())
+        .map(this::mapLatestToGameResults)
         .collect(Collectors.toList());
   }
 
-  private ResultsByGameBlock.GameResults toGameResultsFromLatest(
-      PublicLatestDrawResultsResponse latest, PublicDrawResultItemResponse item, Locale locale) {
-    // parse draw time if available (expected format HH:mm)
-    LocalTime drawTimeLocal = null;
-    if (latest.drawTime() != null && !latest.drawTime().isBlank()) {
-      try {
-        drawTimeLocal = LocalTime.parse(latest.drawTime());
-      } catch (Exception ignore) {
-        // ignore parse errors and keep null
-      }
-    }
+  private ResultsByGameBlock.GameResults mapLatestToGameResults(
+      PublicLatestDrawResultsResponse latest) {
 
-    String channelLabel = channelLabelResolver.resolve(latest.channelName(), drawTimeLocal, locale);
+    var item = latest.results().get(0);
 
-    String historyUrl = "/public/results/" + latest.channelCode();
+    // Use slotKey as "gameCode" for this public UI block
+    var slotKey = nz(latest.slotKey());
+    var gameCode = slotKey;
+    var gameNameKey = slotNameKey(slotKey);
 
-    List<String> main =
-        item.numbersMain() == null
-            ? List.of()
-            : item.numbersMain().stream().map(Object::toString).collect(Collectors.toList());
-    List<String> extra =
-        item.numbersExtra() == null
-            ? List.of()
-            : item.numbersExtra().stream().map(Object::toString).collect(Collectors.toList());
+    // Last result numbers = Haiti lots (lot1..lot4)
+    List<String> lastMain =
+        List.of(nn(item.lot1()), nn(item.lot2()), nn(item.lot3()), nn(item.lot4())).stream()
+            .filter(s -> !s.isBlank())
+            .toList();
 
-    // build nextInfo from latest response if provided
-    var nextInfo =
-        (latest.nextScheduledAt() == null)
-            ? null
-            : new com.tchalanet.server.features.pagemodel.shared.block.ResultsByGameBlock
-                .NextDrawInfo(
-                latest.nextScheduledAt(),
-                latest.nextDrawLabel(),
-                Boolean.TRUE.equals(latest.nextIsOpen()),
-                Boolean.TRUE.equals(latest.nextIsClosingSoon()));
+    List<String> lastExtra = List.of(); // MVP: no extras in this block
+
+    String historyUrl = "/public/results/" + slotKey;
+
+    // Next draw info derived from nextScheduledAt
+    ResultsByGameBlock.NextDrawInfo next = buildNextDrawInfo(latest);
 
     return new ResultsByGameBlock.GameResults(
-        latest.channelCode(),
-        channelLabel,
-        item.occurredAt(),
-        main,
-        extra,
-        null,
-        null,
+        gameCode,
+        gameNameKey,
+        item.occurredAt(), // Instant UTC
+        lastMain,
+        lastExtra,
+        null, // jackpot
+        null, // currency
         historyUrl,
-        nextInfo);
+        next);
+  }
+
+  private ResultsByGameBlock.NextDrawInfo buildNextDrawInfo(
+      PublicLatestDrawResultsResponse latest) {
+    Instant nextAt = latest.nextScheduledAt();
+    if (nextAt == null) return null;
+
+    Instant now = Instant.now(clock);
+
+    boolean isOpen = now.isBefore(nextAt);
+
+    boolean isClosingSoon = false;
+    try {
+      long seconds = Duration.between(now, nextAt).getSeconds();
+      // MVP rule: "closing soon" if <= 5 minutes
+      isClosingSoon = seconds >= 0 && seconds <= 300;
+    } catch (Exception ignore) {
+      // keep false
+    }
+
+    // drawLabel: keep it optional. We can show drawTime or provider/slot hint in UI later.
+    String drawLabel = buildNextDrawLabel(latest);
+
+    return new ResultsByGameBlock.NextDrawInfo(nextAt, drawLabel, isOpen, isClosingSoon);
+  }
+
+  private String buildNextDrawLabel(PublicLatestDrawResultsResponse latest) {
+    // Keep it minimal for MVP:
+    // ex: "14:30" if present, else null.
+    String t = nn(latest.drawTime());
+    if (!t.isBlank()) return t;
+
+    // fallback: provider
+    String p = nn(latest.provider());
+    return p.isBlank() ? null : p;
+  }
+
+  // i18n key for frontend
+  private static String slotNameKey(String slotKey) {
+    if (slotKey == null || slotKey.isBlank()) return "public_draw.slot.unknown";
+    return "public_draw.slot." + slotKey.trim().toLowerCase(Locale.ROOT);
+  }
+
+  private static String nz(String s) {
+    return (s == null) ? "" : s.trim();
+  }
+
+  private static String nn(String s) {
+    return (s == null) ? "" : s.trim();
   }
 }
